Updated method to create loans
defined request body and added business validation
